--- a/public/index.html
+++ b/public/index.html
@@ -15,15 +15,15 @@
       <div class="col-lg-2 col-md-1"></div>
       <div class="col-lg-8 col-md-10 col-sm-12">
         <nav class="navigation">
-          <p><a class="navpageheader" href="/">TREE</a></p>
+          <p><a class="navpageheader" href="https://tree.linkeddatafragments.org/">TREE</a></p>
           <ul>
-            <li class="navpage"><a href="/spec">Specs</a></li>
+            <li class="navpage"><a href="https://tree.linkeddatafragments.org/spec">Specs</a></li>
             <!--<li class="navpage"><a href="/pages">Use it for…</a></li>
             <li class="navpage"><a href="/datasets">Datasets</a></li>-->
-            <li class="navpage"><a href="/software">Software</a></li>
-            <li class="navpage"><a href="/team">Team</a></li>
-            <li class="navpage"><a href="/publications">Publications</a></li>
-            <li class="navpage"><a href="/demo">Try live</a></li>
+            <li class="navpage"><a href="https://tree.linkeddatafragments.org/software">Software</a></li>
+            <li class="navpage"><a href="https://tree.linkeddatafragments.org/team">Team</a></li>
+            <li class="navpage"><a href="https://tree.linkeddatafragments.org/publications">Publications</a></li>
+            <li class="navpage"><a href="https://tree.linkeddatafragments.org/demo">Try live</a></li>
             <li class="navpage new"><a href="https://github.com/treecg">Github</a></li>
           </ul>
         </nav>
